# BattleCity

./: .gitignore  ActivityDiagram.txt  CMakeLists.txt  ClassDiagram.txt  ClassDiagram.vpp  IsProject.sln  SequenceDiagram.txt  StatechartDiagram.txt  StatechartDiagram.vpp  UsecaseDiagram.vpp
.github/workflows/: cmake-multi-platform.yml
Core/: CMakeLists.txt
Core/assets/levels/: level1.txt
Core/assets/maps/: map.txt
Core/include/: Bullet.h  Eagle.h  Entity.h  FileHandler.h  GameConfig.h  GameLogic.h  ILevelFactory.h  ILevelReader.h  IMoveStrategy.h  INavigationStrategy.h  ITankMovementStrategy.h  Level.h  LevelFactory.h  Map.h  Menu.h  MoveDownwardStrategy.h  MoveLeftwardStrategy.h  MoveRightwardStrategy.h  MoveUpwardStrategy.h  NavigateDownwardStrategy.h  NavigateUpwardStrategy.h  Position.h  ReaderBase.h  Tank.h  TankFactory.h  TankMovementStrategy.h  TextLevelReader.h
Core/src/: Bullet.cpp  Eagle.cpp  FileHandler.cpp  GameLogic.cpp  Level.cpp  LevelFactory.cpp  Map.cpp  MoveDownwardStrategy.cpp  MoveLeftwardStrategy.cpp  MoveRightwardStrategy.cpp  MoveUpwardStrategy.cpp  NavigateDownwardStrategy.cpp  NavigateUpwardStrategy.cpp  Tank.cpp  TankFactory.cpp  TankMovementStrategy.cpp  TextLevelReader.cpp
Core/tests/: BulletTest.cpp  CMakeLists.txt  LevelTest.cpp  MapTest.cpp  hello_test.cpp
Docs/: Battle City - Documentație.lyx
Docs/diagrams/: ActivityDiagram.vpp  CollaborationDiagram.txt  CollaborationDiagram.vpp  SequenceDiagram.vpp  UsecaseDiagram.txt
IsProject/: Game.cpp  Game.h  GameConfig.h  IsProject.vcxproj  IsProject.vcxproj.filters  Map.h  Menu.cpp  Menu.h  Source.cpp  Sprite.h  Timer.cpp
IsProject/GameLogic/: Map.cpp  Map.h
IsProject/SFML/: TileMap.cpp  TileMap.h
Main/: CMakeLists.txt
Main/SFML/: CMakeLists.txt
Main/SFML/src/: DEFINITIONS.h  Game.cpp  Game.h  GameConfig.cpp  GameConfig.h  Map.cpp  SFMLBullet.cpp  SFMLBullet.h  SFMLEagle.cpp  SFMLEagle.h  SFMLMenu.cpp  SFMLMenu.h  SFMLTank.cpp  SFMLTank.h  Source.cpp  TextureManager.cpp  TextureManager.h  TileMap.cpp  TileMap.h  Timer.h
